// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author component does not render without a username 1`] = `
<div>
  <li>
    <a
      aria-label="components.article.author.githubLinkLabel"
      class="link"
      href="https://github.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt=""
        data-nimg="1"
        decoding="async"
        height="0"
        loading="lazy"
        src="http://localhost/_next/image?url=https%3A%2F%2Fgithub.com%2F.png%3Fsize%3D0&w=16&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fgithub.com%2F.png%3Fsize%3D0&w=16&q=75 1x"
        style="color: transparent; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        width="0"
      />
    </a>
  </li>
</div>
`;

exports[`Author component renders correctly 1`] = `
<div>
  <li>
    <a
      aria-label="components.article.author.githubLinkLabel"
      class="link"
      href="https://github.com/test-author"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="test-author"
        data-nimg="1"
        decoding="async"
        height="60"
        loading="lazy"
        src="http://localhost/_next/image?url=https%3A%2F%2Fgithub.com%2Ftest-author.png%3Fsize%3D60&w=128&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fgithub.com%2Ftest-author.png%3Fsize%3D60&w=64&q=75 1x, /_next/image?url=https%3A%2F%2Fgithub.com%2Ftest-author.png%3Fsize%3D60&w=128&q=75 2x"
        style="color: transparent; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        width="60"
      />
    </a>
  </li>
</div>
`;
